5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1643_1053.log
== TEST (2019-04-08 18:30:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase")
if (frase == cervo):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (frase == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase")
if ((frase == cervo)):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if ((frase == cervo)):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("frase")
if (patrono == cervo):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:34:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (patrono == cervo):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (patrono == cervo):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (patrono == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:35:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- EXECUTION TIME:
0.124938
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
frase? bode nao eh patrono do Harry Potter.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("cervo eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:36:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:36:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	mensagem = ("eh patrono do Harry Potter.")
else:
	mensagem = ("nao eh patrono do Harry Potter.")
print(frase, mensagem)
-- EXECUTION TIME:
0.143148
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:37:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("eh patrono do Harry Potter.")
else:
	print(frase, "nao eh patrono do Harry Potter.")

-- EXECUTION TIME:
0.142144
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:37:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("eh patrono do Harry Potter.")
else:
	print(frase, "nao eh patrono do Harry Potter.")

-- OUTPUT:
eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:37:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase, "nao eh patrono do Harry Potter.")

-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:37:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase, "nao eh patrono do Harry Potter.")

-- EXECUTION TIME:
0.149164
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:37:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase, "nao eh patrono do Harry Potter.")

-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:38:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase,"nao eh patrono do Harry Potter.")

-- EXECUTION TIME:
0.192407
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase,"nao eh patrono do Harry Potter.")

-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter.")
else:
	print(frase,"nao eh patrono do Harry Potter.")

-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:39:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
frase = input("frase? ")
patrono = ("cervo")
if (frase == patrono):
	print("cervo eh patrono do Harry Potter")
else:
	print(frase,"nao eh patrono do Harry Potter")

-- EXECUTION TIME:
0.15574
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
